[gd_scene load_steps=2 format=3 uid="uid://c0rqscpwx8ycc"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_5k1vg"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5k1vg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1164.0
offset_bottom = 660.0
color = Color(0.486275, 0.486275, 0.486275, 0.647059)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 103.0
offset_top = 267.0
offset_right = 329.0
offset_bottom = 576.0

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu (RESET)"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 20.0
step = 0.5

[node name="Label6" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "REMEMBER, YOUR PROGRESS
DOES NOT SAVE"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
